tests/baselines/reference/contextuallyTypedBindingInitializerNegative.errors.txt
tests/cases/conformance/types/contextualTypes/methodDeclarations/contextuallyTypedBindingInitializerNegative.ts(4,20): error TS2322: Type '(v: number) => number' is not assignable to type '(x: number) => string'.
  Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/contextualTypes/methodDeclarations/contextuallyTypedBindingInitializerNegative.ts(5,23): error TS2322: Type '(v: number) => number' is not assignable to type '(x: number) => string'.
  Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/contextualTypes/methodDeclarations/contextuallyTypedBindingInitializerNegative.ts(6,25): error TS2322: Type '(v: number) => number' is not assignable to type '(x: number) => string'.
  Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/contextualTypes/methodDeclarations/contextuallyTypedBindingInitializerNegative.ts(11,23): error TS2322: Type '{ show: (v: number) => number; }' is not assignable to type 'Show'.
  Types of property 'show' are incompatible.
    Type '(v: number) => number' is not assignable to type '(x: number) => string'.
      Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/contextualTypes/methodDeclarations/contextuallyTypedBindingInitializerNegative.ts(16,23): error TS2322: Type '(arg: string) => number' is not assignable to type '(s: string) => string'.
  Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/contextualTypes/methodDeclarations/contextuallyTypedBindingInitializerNegative.ts(21,14): error TS2322: Type '[number, number]' is not assignable to type '[string, number]'.
  Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/contextualTypes/methodDeclarations/contextuallyTypedBindingInitializerNegative.ts(26,14): error TS2322: Type '"baz"' is not assignable to type '"foo" | "bar"'.


==== tests/cases/conformance/types/contextualTypes/methodDeclarations/contextuallyTypedBindingInitializerNegative.ts (7 errors) ====
    interface Show {
        show: (x: number) => string;
    }
    function f({ show: showRename = v => v }: Show) {}
                       ~~~~~~~~~~
!!! error TS2322: Type '(v: number) => number' is not assignable to type '(x: number) => string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
    function f2({ "show": showRename = v => v }: Show) {}
                          ~~~~~~~~~~
!!! error TS2322: Type '(v: number) => number' is not assignable to type '(x: number) => string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
    function f3({ ["show"]: showRename = v => v }: Show) {}
                            ~~~~~~~~~~
!!! error TS2322: Type '(v: number) => number' is not assignable to type '(x: number) => string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
    
    interface Nested {
        nested: Show
    }
    function ff({ nested: nestedRename = { show: v => v } }: Nested) {}
                          ~~~~~~~~~~~~
!!! error TS2322: Type '{ show: (v: number) => number; }' is not assignable to type 'Show'.
!!! error TS2322:   Types of property 'show' are incompatible.
!!! error TS2322:     Type '(v: number) => number' is not assignable to type '(x: number) => string'.
!!! error TS2322:       Type 'number' is not assignable to type 'string'.
    
    interface StringIdentity {
        stringIdentity(s: string): string;
    }
    let { stringIdentity: id = arg => arg.length }: StringIdentity = { stringIdentity: x => x};
                          ~~
!!! error TS2322: Type '(arg: string) => number' is not assignable to type '(s: string) => string'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
    
    interface Tuples {
        prop: [string, number];
    }
    function g({ prop = [101, 1234] }: Tuples) {}
                 ~~~~
!!! error TS2322: Type '[number, number]' is not assignable to type '[string, number]'.
!!! error TS2322:   Type 'number' is not assignable to type 'string'.
    
    interface StringUnion {
        prop: "foo" | "bar";
    }
    function h({ prop = "baz" }: StringUnion) {}
                 ~~~~
!!! error TS2322: Type '"baz"' is not assignable to type '"foo" | "bar"'.
    